Added Some APIs Related to User
