# routes/appRoutes.js
@@ -5,13 +5,17 @@ const {
   login,
   logout,
   getUserData,
+  updateUser,
 } = require("../controllers/user.controller");
 const { verifyToken } = require("../middlewares/auth.middleware");
 
-router.post("/user", register);
-router.get("/user", verifyToken, getUserData);
-
 router.post("/login", login);
 router.get("/logout", verifyToken, logout);
+
+router
+  .route("/user")
+  .post(register)
+  .get(verifyToken, getUserData)
+  .put(verifyToken, updateUser);
 
 module.exports = router;
